--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,155 @@
 /* add css module styles here (optional) */
 
-.test {
-  margin: 2em;
-  padding: 0.5em;
-  border: 2px solid #000;
-  font-size: 2em;
-  text-align: center;
+.clockContainer {
+}
+
+.clock {
+  display: grid;
+  grid-template-columns: 10fr 1em 10fr;
+  column-gap: 1rem;
+  background-color: #000;
+  border: 5px solid gray;
+  padding: 2rem;
+}
+
+.section,
+.colon {
+  position: relative;
+}
+
+.section {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-self: center;
+  justify-items: center;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+.digitContainer,
+.digit {
+  position: relative;
+  width: 100%;
+}
+.digitContainer {
+  justify-self: center;
+}
+
+.colonDot {
+  width: 1rem;
+  height: 1rem;
+  position: absolute;
+}
+
+.colOn {
+  background-color: red;
+}
+
+.colOff {
+  background-color: rgb(58, 46, 46);
+}
+
+.colonDot:first-child {
+  top: 5rem;
+}
+.colonDot:last-child {
+  top: 9rem;
+}
+
+.segon {
+  background-color: red;
+}
+.segoff {
+  background-color: rgb(58, 46, 46);
+}
+
+.laying::before,
+.standing::before {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0 0.5em 0.5em 0.5em;
+  top: -0.5em;
+}
+
+.laying::after,
+.standing::after {
+  content: ' ';
+  position: absolute;
+  bottom: -0.5em;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 0.5em 0.5em 0 0.5em;
+}
+
+.segon.laying::before,
+.segon.standing::before {
+  border-color: transparent transparent red transparent;
+}
+.segon.laying::after,
+.segon.standing::after {
+  border-color: red transparent transparent transparent;
+}
+
+.segoff.laying::before,
+.segoff.standing::before {
+  border-color: transparent transparent rgb(58, 46, 46) transparent;
+}
+.segoff.laying::after,
+.segoff.standing::after {
+  border-color: rgb(58, 46, 46) transparent transparent transparent;
+}
+
+.segment {
+  width: 1rem;
+  height: 4rem;
+  display: block;
+  position: absolute;
+}
+/* top */
+.segment:nth-child(1) {
+  rotate: 90deg;
+  left: 2.6rem;
+  top: 0rem;
+}
+/* top left */
+.segment:nth-child(2) {
+  left: 0;
+  top: 2.6rem;
+}
+
+/* top right */
+.segment:nth-child(3) {
+  left: 5.15rem;
+  top: 2.6rem;
+}
+
+/* middle */
+.segment:nth-child(4) {
+  top: 5.2rem;
+  left: 2.56rem;
+  rotate: 90deg;
+}
+
+/* bottom left */
+.segment:nth-child(5) {
+  left: 0;
+  top: 7.75rem;
+}
+
+/* bottom right */
+.segment:nth-child(6) {
+  left: 5.15rem;
+  top: 7.75rem;
+}
+
+/* bottom */
+.segment:nth-child(7) {
+  left: 2.56rem;
+  top: 10.3rem;
+  rotate: 90deg;
 }
